--- a/matcher/templates/criteria.html
+++ b/matcher/templates/criteria.html
@@ -9,12 +9,12 @@
     <div class="card-columns">
   {% for i in entity_types %}
     <div class="card">
-      <h5 class="card-header">
+      <p class="card-header">
         {{ i.name | capitalize }}
-        <span class="text-muted small font-weight-normal">({{i.dist}}km)</span>
-        {% if i.check_housename %}<span class="badge small badge-info font-weight-normal">house name</span>{% endif %}
-        {% if i.area %}<span class="badge small badge-info font-weight-normal">area</span>{% endif %}
-      </h5>
+        <span class="text-muted small">({{i.dist}}km)</span>
+        {% if i.check_housename %}<span class="badge badge-info">house name</span>{% endif %}
+        {% if i.area %}<span class="badge badge-info">area</span>{% endif %}
+      </p>
       <div class="card-block">
         <ul class="card-text list-unstyled">
             <li>categories:
