--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -7,6 +7,9 @@
   </title>
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap4/css/bootstrap.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+  {% block style %}
+  {% endblock %}
 </head>
 
 <body>
