--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -25,6 +25,11 @@
     {% endfor %}
     </table>
 
+    <h3>oql</h3>
+    <pre>{{ oql }}</pre>
+    <h3>overpass result</h3>
+    <pre>{{ overpass_reply['elements'] | pprint }}</pre>
+
   </div>
 </div>
 {% endblock %}
