--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -14,6 +14,8 @@
     <h3>site links</h3>
     <pre>{{ entity['sitelinks'] | pprint }}</pre>
 
+    <h3>wikidata names</h3>
+    <pre>{{ wikidata_names | pprint }}</pre>
 
     <h3>osm_keys</h3>
     <table class="table">
@@ -29,6 +31,11 @@
     <pre>{{ oql }}</pre>
     <h3>overpass result</h3>
     <pre>{{ overpass_reply['elements'] | pprint }}</pre>
+
+    <h3>matches</h3>
+    {% for element, match in found %}
+      <pre>{{ element | pprint }}</pre>
+    {% endfor %}
 
   </div>
 </div>
