social-auth OSM login

--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -15,5 +15,9 @@
 <body>
   {% include 'navbar.html' %}
   {% block content %}{% endblock %}
+
+  <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+  <script src="{{ url_for('static', filename='bootstrap4/js/bootstrap.js') }}"></script>
 </body>
 </html>
