--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -10,13 +10,24 @@
   </form>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       {% for p in navbar_pages %}
         <li class="nav-item{% if p.name == active %} active{% endif %}">
           <a class="nav-link" href="{{ url_for('.' + p.name) }}">{{ p.label }}{% if p.name == active %} <span class="sr-only">(current)</span>{% endif %}</a>
       </li>
     {% endfor %}
     </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        {% if g.user.is_authenticated %}
+            <a class="nav-link" href="{{ url_for('logout') }}">logout</a>
+        {% else %}
+            <a class="nav-link" href="{{ url_for('social.auth', backend='openstreetmap') }}">login with OSM</a>
+        {% endif %}
+      </li>
+    </ul>
   </div>
+
+
 </div>
 </nav>
