show wikidata tag match/mismatch

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -47,7 +47,7 @@
     <p>
     <a href="{{ i.wikidata_uri }}">{{ i.qid }}</a>
     &mdash; {{ i.enwiki }}
-    &mdash; <a href="{{ i.get_osm_url() }}">Wikidata location on OSM</a>
+    &mdash; <a href="{{ i.get_osm_url() }}">OSM</a>
     {# <br>
     <ul>
       <li>Categories:
@@ -68,6 +68,14 @@
       ({{ c.osm_type}}{% if c.dist %},
        {{ c.dist | int }} m{% endif %})<br>
        {{ ', '.join(c.matching_tags()) }}
+       {% if 'wikidata' in c.tags %}
+         <br>
+         {% if c.tags.wikidata == i.qid %}
+           wikidata match: <span class="match">{{ c.tags.wikidata }}</span>
+         {% else %}
+           wikidata mismatch: <span class="mismatch">{{ c.tags.wikidata }}</span>
+         {% endif %}
+       {% endif %}
       </li>
     {% endfor %}
     </ul>
