--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -30,8 +30,8 @@
 
     <h3>oql</h3>
     <pre>{{ oql }}</pre>
-    <h3>overpass result</h3>
-    <pre>{{ overpass_reply['elements'] | pprint }}</pre>
+    {# <h3>overpass result</h3>
+    <pre>{{ overpass_reply['elements'] | pprint }}</pre> #}
 
     <h3>matches</h3>
     {% for element, match in found %}
