--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -1,3 +1,4 @@
+{% from "macro.html" import place_box %}
 {% extends "base.html" %}
 
 {% block title %}{{ place.display_name }}:{% endblock %}
@@ -9,14 +10,7 @@
     <h1>{{ place.name }}</h1>
   {% set q = place.display_name %}
 
-    <div class="box">
-      <b>{{ place.display_name }}</b><br>
-      category: {{ place.category }}
-      &mdash;
-      type: {{ place.type }}
-      &mdash;
-      OSM: <a href="https://www.openstreetmap.org/{{ place.osm_type }}/{{ place.osm_id }}">{{ place.osm_type}} {{ place.osm_id }}</a><br>
-    </div>
+  {{ place_box(place) }}
 
   {% include "tabs.html" with context %}
 
