show flash message on candidates page

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -5,6 +5,7 @@
 
 {% block content %}
   <div class="container my-2">
+  {% include "flash_msg.html" %}
   <div class="row">
   <div class="col">
     <h1>{{ place.name }}</h1>
