--- a/matcher/templates/wikidata_query.html
+++ b/matcher/templates/wikidata_query.html
@@ -1,3 +1,4 @@
+{% from "macro.html" import place_box %}
 {% extends "base.html" %}
 
 {% block title %}{{ place.display_name }}:{% endblock %}
@@ -7,23 +8,15 @@
   <div class="row">
   <div class="col">
     <h1>{{ place.name }}</h1>
-  {% set q = place.display_name %}
 
-    <div class="box">
-      <b>{{ place.display_name }}</b><br>
-      category: {{ place.category }}
-      &mdash;
-      type: {{ place.type }}
-      &mdash;
-      OSM: <a href="https://www.openstreetmap.org/{{ place.osm_type }}/{{ place.osm_id }}">{{ place.osm_type}} {{ place.osm_id }}</a><br>
-    </div>
+    {{ place_box(place) }}
 
-  {% include "tabs.html" with context %}
+    {% include "tabs.html" with context %}
 
   </div>
   </div>
 
-  <h4>Wikidata SPARQL query</h4>
+  <h4 class="my-2">Wikidata SPARQL query</h4>
   <pre>{{ place.get_wikidata_query() }}</pre>
 
 </div>
