--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -1,14 +1,14 @@
 {% for hit in results %}
   <div class="box">
     {% if hit.icon %}<img src="{{ hit.icon.replace('http://', 'https://') }}">{% endif %}
-    {% if hit.osm_type == 'relation' %}
+    {% if hit.osm_type in ('relation', 'way') %}
       <b>
         {% if name %}
           <a href="{{ url_for('matcher_progress', osm_id=hit.osm_id) }}">{{ name }}</a>,
           {% if hit.address.state %}{{ hit.address.state }}, {% endif %}
           {{ hit.address.country }}
         {% else %}
-          <a href="{{ url_for('matcher_progress', osm_id=hit.osm_id) }}">{{ hit.display_name }}</a>
+          <a href="{{ url_for('matcher_progress', osm_type=hit.osm_type, osm_id=hit.osm_id) }}">{{ hit.display_name }}</a>
         {% endif %}
       </b><br>
     {% else %}
