--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -1,9 +1,12 @@
+{% from "macro.html" import place_box %}
 {% extends "base.html" %}
 
 {% block title %}{{ place.display_name }}:{% endblock %}
 
 {% block content %}
+{% set place_id = place.place_id %}
 {% set osm_id = place.osm_id %}
+{% set osm_type = place.osm_type %}
 {% set item_list = place.item_list() %}
 
   <div class="container my-2">
@@ -12,14 +15,7 @@
     <h1>{{ place.name }}</h1>
   {% set q = place.display_name %}
 
-  <div class="box">
-    <b>{{ place.display_name }}</b><br>
-    category: {{ place.category }}
-    &mdash;
-    type: {{ place.type }}
-    &mdash;
-    OSM: <a href="https://www.openstreetmap.org/{{ place.osm_type }}/{{ place.osm_id }}">{{ place.osm_type}} {{ place.osm_id }}</a><br>
-  </div>
+  {{ place_box(place) }}
 
   <div class="loading">
     <span id="load_wikidata" class="pending">loading names from wikidata</span><br>
@@ -45,7 +41,7 @@
 
   </div>
 
-  <p><a href="{{ url_for('candidates', osm_id=osm_id) }}" id="candidates-link">view match candidates</a></p>
+  <p><a href="{{ url_for('candidates', osm_type=osm_type, osm_id=osm_id) }}" id="candidates-link">view match candidates</a></p>
 
   <p>{{ '{:,d}'.format(place.items.count()) }} items found</p>
 
@@ -73,15 +69,15 @@
 <script>
 var overpass_url = 'https://overpass-api.de/api/interpreter';
 var oql = {{ place.get_oql() | tojson }};
-var load_wikidata_url = {{ url_for('load_wikidata', osm_id=osm_id) | tojson }};
-var check_overpass_url = {{ url_for('check_overpass', osm_id=osm_id) | tojson }};
-var overpass_timeout_url = {{ url_for('overpass_timeout', osm_id=osm_id) | tojson }};
-var post_overpass_url = {{ url_for('post_overpass', osm_id=osm_id) | tojson }};
-var load_osm2pgsql_url = {{ url_for('load_osm2pgsql', osm_id=osm_id) | tojson }};
-var load_individual_match_url = {{ url_for('load_individual_match', osm_id=osm_id, item_id=0) | tojson }};
+var load_wikidata_url = {{ url_for('load_wikidata', place_id=place_id) | tojson }};
+var check_overpass_url = {{ url_for('check_overpass', place_id=place_id) | tojson }};
+var overpass_timeout_url = {{ url_for('overpass_timeout', place_id=place_id) | tojson }};
+var post_overpass_url = {{ url_for('post_overpass', place_id=place_id) | tojson }};
+var load_osm2pgsql_url = {{ url_for('load_osm2pgsql', place_id=place_id) | tojson }};
+var load_individual_match_url = {{ url_for('load_individual_match', place_id=place_id, item_id=0) | tojson }};
 load_individual_match_url = load_individual_match_url.slice(0, -1);
 
-var load_ready = {{ url_for('load_ready', osm_id=osm_id) | tojson }};
+var load_ready = {{ url_for('load_ready', place_id=place_id) | tojson }};
 // var items = {{ item_list | tojson }};
 
 </script>
