--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -11,7 +11,7 @@
 
   {{ place_box(place) }}
 
-    <form class="form-inline" method="POST" action="{{ url_for('add_tags', osm_id=place.osm_id) }}">
+    <form class="form-inline" method="POST" action="{{ url_for('add_tags', osm_type=place.osm_type, osm_id=place.osm_id) }}">
       <input type="hidden" name="confirm" value="yes" />
 
       {% for include in request.form.getlist('include') %}
