no node support yet

--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -19,7 +19,7 @@
         {{ hit.display_name }}
       {% endif %}
       </b><br>
-      [matcher only works with OSM relations]<br>
+      [matcher doesn't support OSM nodes yet]<br>
     {% endif %}
     category: {{ hit.category }}
     &mdash;
