--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -74,7 +74,7 @@
       {% for c in i.candidates %}
       {% set m = c.get_match() %}
         <li><a href="https://www.openstreetmap.org/{{ c.osm_type }}/{{ c.osm_id }}">
-          {{ (m.osm_key + '=' + m.osm_name) if m else c.name }}
+          {{ (m.osm_key + '=' + m.osm_name) if m else c.name -}}
         </a>
         ({{ c.osm_type}}{% if c.dist %},
          {{ c.dist | int }} m{% endif %})
