--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -76,20 +76,34 @@
     <h3>matches</h3>
     {% if not found %}
         <p>no matches found</p>
+    {% else %}
+      <ul>
+      {% for c, m in found %}
+        <li><a href="https://www.openstreetmap.org/{{ c.type }}/{{ c.id }}">
+          {{ (m.osm_key + '=' + m.osm_name) if m else c.tags.name }}
+        </a> ({{ c.type}})
+
+         <a href="#" class="show_tags_link" data-key="{{ c.key }}">show all tags</a>
+         <div class="all_tags" id="candidate{{ c.key }}">
+           {% for k, v in c.tags.items() %}
+            {{ k }}: {{ v }}</br>
+           {% endfor %}
+         </div>
+         </li>
+
+        {% if 'wikidata' not in c.tags %}
+          <form method="post" action="{{ url_for('add_wikidata_tag') }}">
+            <input type="hidden" name="osm_id" value="{{ c.id }}" />
+            <input type="hidden" name="osm_type" value="{{ c.type }}" />
+            <input type="hidden" name="wikidata" value="{{ qid }}" />
+            <button class="btn btn-primary" type="submit">add wikidata tag to OSM</button>
+          </form>
+        {% else %}
+          <p>OSM already includes wikidata tag.</p>
+        {% endif %}
+      {% endfor %}
+      </ul>
     {% endif %}
-    {% for element, match in found %}
-      <pre>{{ element | pprint }}</pre>
-      {% if 'wikidata' not in element.tags %}
-        <form method="post" action="{{ url_for('add_wikidata_tag') }}">
-          <input type="hidden" name="osm_id" value="{{ element.id }}" />
-          <input type="hidden" name="osm_type" value="{{ element.type }}" />
-          <input type="hidden" name="wikidata" value="{{ qid }}" />
-          <button class="btn btn-primary" type="submit">add wikidata tag to OSM</button>
-        </form>
-      {% else %}
-        <p>OSM already includes wikidata tag.</p>
-      {% endif %}
-    {% endfor %}
 
     {% endif %}
 
